--- a/bancoAPI/src/main/resources/application.properties
+++ b/bancoAPI/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-mysql=jdbc:mysql://127.0.0.1:3306/selecaoinfoway_db?characterEncoding=utf-8
-usuario=root
-senha=root
+mysql=jdbc:mysql://selecaoinfoway-db.cche12ugxaof.us-east-2.rds.amazonaws.com:3306/selecaoinfoway_db?characterEncoding=utf-8
+usuario=userinfoway
+senha=userinfoway
